--- a/res/layout/activity_login_layout.xml
+++ b/res/layout/activity_login_layout.xml
@@ -1,7 +1,133 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:background="#ffffff"
+                android:fitsSystemWindows="true" >
 
-</LinearLayout>
+    <RelativeLayout
+            android:id="@+id/login_layout"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:gravity="center" >
+
+        <FrameLayout
+                android:id="@+id/username_layout"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/username_layout"
+                android:layout_marginTop="55dp"
+                android:gravity="center" >
+            <EditText
+                    android:id="@+id/username"
+                    android:layout_width="fill_parent"
+                    android:layout_height="@dimen/default_edittext_height"
+                    android:inputType="phone"
+                    android:paddingRight="60dp"
+                    android:background="@drawable/login_edite_style"
+                    android:hint="手机号码"
+                    android:textColorHint="#666666"
+                    android:maxLength="11"
+                    android:paddingLeft="60dp">
+            </EditText>
+            <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_gravity="left|center_vertical"
+                    android:background="@drawable/ic_launcher" />
+            <Button
+                    android:id="@+id/bt_username_clear"
+                    android:layout_width="23dp"
+                    android:layout_height="23dp"
+                    android:background="@drawable/editor_clear_layout"
+                    android:visibility="invisible"
+                    android:layout_gravity="right|center_vertical"
+                    android:layout_marginRight="10dp"
+            />
+        </FrameLayout>
+
+        <FrameLayout
+                android:id="@+id/usercode_layout"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/username_layout"
+                android:layout_marginTop="20dp"
+                android:gravity="center" >
+            <EditText
+                    android:id="@+id/password"
+                    android:layout_width="fill_parent"
+                    android:layout_height="@dimen/default_edittext_height"
+                    android:inputType="textPassword"
+                    android:paddingRight="60dp"
+                    android:background="@drawable/login_edite_style"
+                    android:hint="密码"
+                    android:textColorHint="#666666"
+                    android:maxLength="11"
+                    android:paddingLeft="60dp">
+             </EditText>
+            <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_gravity="left|center_vertical"
+                    android:background="@drawable/ic_launcher" />
+            <Button
+                    android:id="@+id/bt_pwd_clear"
+                    android:layout_width="23dp"
+                    android:layout_height="23dp"
+                    android:background="@drawable/editor_clear_layout"
+                    android:visibility="invisible"
+                    android:layout_gravity="right|center_vertical"
+                    android:layout_marginRight="10dp"
+            />
+            <Button
+                    android:id="@+id/bt_pwd_eye"
+                    android:layout_width="23dp"
+                    android:layout_height="23dp"
+                    android:background="@drawable/agt"
+                    android:layout_gravity="right|center_vertical"
+                    android:layout_marginRight="40dp"
+                    android:visibility="invisible"
+                     />
+    </FrameLayout>
+
+            <Button
+                    android:id="@+id/login"
+                    android:layout_width="fill_parent"
+                    android:layout_height="45dp"
+                    android:layout_below="@id/usercode_layout"
+                    android:layout_marginTop="30dp"
+                    android:background="#ff336699"
+                    android:textColor="@android:color/white"
+                    android:gravity="center"
+                    android:enabled="false"
+                    android:text="登录" />
+                <Button
+                    android:id="@+id/login_error"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignRight="@id/login"
+                    android:layout_marginTop="10dp"
+                    android:layout_below="@id/login"
+                    android:background="#00000000"
+                    android:textColor="@color/login_text_layout"
+                    android:text="忘记密码"
+                    android:textSize="16sp" />
+                <Button
+                    android:id="@+id/register"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignLeft="@id/login"
+                    android:layout_below="@id/login"
+                    android:layout_marginTop="10dp"
+                    android:background="#00000000"
+                    android:textColor="@color/login_text_layout"
+                    android:gravity="left|center_vertical"
+                    android:text="注册"
+                    android:textSize="16sp"
+                    android:visibility="visible" />
+        </RelativeLayout>
+ </RelativeLayout>
