--- a/res/layout/activity_regist_layout.xml
+++ b/res/layout/activity_regist_layout.xml
@@ -6,7 +6,7 @@
                 android:fitsSystemWindows="true" >
 
     <RelativeLayout
-            android:id="@+id/login_layout"
+            android:id="@+id/rg_login_layout"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
@@ -14,13 +14,14 @@
             android:gravity="center" >
 
         <FrameLayout
-                android:id="@+id/username_layout"
+                android:id="@+id/rg_username_layout"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
+                android:layout_below="@id/username_layout"
                 android:layout_marginTop="55dp"
                 android:gravity="center" >
             <EditText
-                    android:id="@+id/username"
+                    android:id="@+id/rg_username"
                     android:layout_width="fill_parent"
                     android:layout_height="@dimen/default_edittext_height"
                     android:inputType="phone"
@@ -38,7 +39,7 @@
                     android:layout_gravity="left|center_vertical"
                     android:background="@drawable/ic_launcher" />
             <Button
-                    android:id="@+id/bt_username_clear"
+                    android:id="@+id/rg_username_clear"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:background="@drawable/editor_clear_layout"
@@ -49,14 +50,14 @@
         </FrameLayout>
 
         <FrameLayout
-                android:id="@+id/usercode_layout"
+                android:id="@+id/rg_usercode_layout"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/username_layout"
+                android:layout_below="@id/rg_username_layout"
                 android:layout_marginTop="20dp"
                 android:gravity="center" >
             <EditText
-                    android:id="@+id/password"
+                    android:id="@+id/rg_password"
                     android:layout_width="fill_parent"
                     android:layout_height="@dimen/default_edittext_height"
                     android:inputType="textPassword"
@@ -66,7 +67,7 @@
                     android:textColorHint="#666666"
                     android:maxLength="11"
                     android:paddingLeft="60dp">
-             </EditText>
+            </EditText>
             <ImageView
                     android:layout_width="40dp"
                     android:layout_height="40dp"
@@ -74,59 +75,67 @@
                     android:layout_gravity="left|center_vertical"
                     android:background="@drawable/ic_launcher" />
             <Button
-                    android:id="@+id/bt_pwd_clear"
-                    android:layout_width="23dp"
-                    android:layout_height="23dp"
-                    android:background="@drawable/editor_clear_layout"
-                    android:visibility="invisible"
-                    android:layout_gravity="right|center_vertical"
-                    android:layout_marginRight="10dp"
-            />
-            <Button
-                    android:id="@+id/bt_pwd_eye"
+                    android:id="@+id/rg_pwd_eye"
                     android:layout_width="23dp"
                     android:layout_height="23dp"
                     android:background="@drawable/agt"
                     android:layout_gravity="right|center_vertical"
-                    android:layout_marginRight="40dp"
+                    android:layout_marginRight="10dp"
                     android:visibility="invisible"
-                     />
-    </FrameLayout>
+            />
+        </FrameLayout>
+
+        <FrameLayout
+                android:id="@+id/rg_identify_layout"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/rg_usercode_layout"
+                android:layout_marginTop="20dp"
+                android:gravity="center" >
+
+            <EditText
+                    android:id="@+id/rg_identify"
+                    android:layout_width="fill_parent"
+                    android:layout_height="@dimen/default_edittext_height"
+                    android:layout_marginRight="125dp"
+                    android:background="@drawable/login_edite_style"
+                    android:hint="验证码"
+                    android:textColorHint="#666666"
+                    android:maxLength="6"
+                    android:paddingLeft="60dp">
+            </EditText>
+            <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_gravity="left|center_vertical"
+                    android:background="@drawable/ic_launcher" />
 
             <Button
-                    android:id="@+id/login"
-                    android:layout_width="fill_parent"
-                    android:layout_height="45dp"
-                    android:layout_below="@id/usercode_layout"
-                    android:layout_marginTop="30dp"
-                    android:background="@drawable/btn_register_bg"
-                    android:textColor="@android:color/white"
-                    android:gravity="center"
-                    android:enabled="false"
-                    android:text="登录" />
-                <Button
-                    android:id="@+id/login_error"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignRight="@id/login"
-                    android:layout_marginTop="10dp"
-                    android:layout_below="@id/login"
-                    android:background="#00000000"
-                    android:textColor="@color/login_text_layout"
-                    android:text="忘记密码"
-                    android:textSize="16sp" />
-                <Button
-                    android:id="@+id/register"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignLeft="@id/login"
-                    android:layout_below="@id/login"
-                    android:layout_marginTop="10dp"
-                    android:background="#00000000"
-                    android:textColor="@color/login_text_layout"
-                    android:gravity="left|center_vertical"
-                    android:text="注册"
-                    android:textSize="16sp"
-                    android:visibility="visible" />
-        </RelativeLayout>
- </RelativeLayout>
+                    android:id="@+id/rg_identify_bt"
+                    android:layout_width="120dp"
+                    android:layout_height="@dimen/default_edittext_height"
+                    android:layout_marginLeft="10dp"
+                    android:layout_gravity="right|center_vertical"
+                    android:text="发送验证码"
+                    android:textSize="12dp"
+                    android:textColor="#000000"
+                     />
+
+        </FrameLayout>
+
+        <Button
+                android:id="@+id/register"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:layout_below="@id/rg_identify_layout"
+                android:layout_marginTop="24dp"
+                android:background="@drawable/btn_register_bg"
+                android:enabled="false"
+                android:paddingBottom="7dp"
+                android:paddingTop="7dp"
+                android:text="注册"
+                android:textColor="@android:color/white"
+                android:textSize="18sp" />
+    </RelativeLayout>
+</RelativeLayout>
