--- a/res/layout/activity_mian_temp.xml
+++ b/res/layout/activity_mian_temp.xml
@@ -3,7 +3,7 @@
     android:id="@+id/mainLayout"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-                android:background="#000000">
+    android:background="#000000">
 
     <RelativeLayout
         android:id="@+id/title"
@@ -22,8 +22,16 @@
             android:text="E患通"
             android:textColor="#ffffff"
             android:textSize="18sp" />
-
     </RelativeLayout>
+
+    <include
+            android:id="@+id/error_item"
+            android:layout_below="@id/title"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:visibility="gone"
+            layout="@layout/neterror_item"
+        />
 
     <LinearLayout
         android:id="@+id/main_bottom"
@@ -193,6 +201,6 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_above="@id/view_temp"
-        android:layout_below="@id/title" />
+        android:layout_below="@id/error_item" />
 
 </RelativeLayout>
