--- a/res/layout/fragment_main_01.xml
+++ b/res/layout/fragment_main_01.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              tools:context="${packageName}.${activityClass}">
 
-   <TextView 
-       android:id="@+id/tv"
-       android:layout_width="fill_parent"
-       android:layout_height="fill_parent"
-       android:text="1"
-       android:gravity="center_vertical|center_horizontal"/>
+   <com.example11.view.XListView
+           android:id="@+id/xListView"
+           android:layout_width="match_parent"
+           android:cacheColorHint="#00000000"
+           android:layout_height="match_parent"
+   />
 
 </LinearLayout>
