--- a/res/layout/fragment_main_02.xml
+++ b/res/layout/fragment_main_02.xml
@@ -3,11 +3,11 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
 
-     <TextView 
-       android:id="@+id/tv"
-       android:layout_width="fill_parent"
-       android:layout_height="fill_parent"
-       android:text="2"
-       android:gravity="center_vertical|center_horizontal"/>
+     <com.example11.view.XListView
+             android:id="@+id/xListView"
+             android:layout_width="match_parent"
+             android:cacheColorHint="#00000000"
+             android:layout_height="match_parent"
+     />
 
 </LinearLayout>
