--- a/res/layout/activity_login_layout.xml
+++ b/res/layout/activity_login_layout.xml
@@ -1,9 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:background="#ffffff"
-                android:fitsSystemWindows="true" >
+<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+                 android:background="#ffffff"
+                 android:layout_width="match_parent"
+                 android:layout_height="match_parent">
+
+    <RelativeLayout
+            android:id="@+id/title"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/height_top_bar"
+            android:layout_alignParentTop="true"
+            android:background="@color/common_top_bar_blue" >
+
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:id="@+id/titlemsg"
+                android:text="E患通"
+                android:textColor="#ffffff"
+                android:textSize="18sp" />
+    </RelativeLayout>
+
+<com.example11.view.LinearLayoutView
+                android:layout_width="match_parent"
+                android:id="@+id/login_root_layout"
+                android:layout_below="@id/title"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:focusable="true"
+                android:focusableInTouchMode="true" >
 
     <RelativeLayout
             android:id="@+id/login_layout"
@@ -13,11 +39,26 @@
             android:layout_marginRight="20dp"
             android:gravity="center" >
 
+        <LinearLayout
+                android:id="@+id/login_layout_logo"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:background="#00ff0000"
+                android:orientation="vertical" >
+
+            <TextView
+                    android:id="@+id/textView1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    />
+        </LinearLayout>
+
         <FrameLayout
                 android:id="@+id/username_layout"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="55dp"
+                android:layout_below="@id/login_layout_logo"
+                android:layout_marginTop="30dp"
                 android:gravity="center" >
             <EditText
                     android:id="@+id/username"
@@ -82,43 +123,50 @@
                     android:layout_marginRight="10dp"
                     android:visibility="invisible"
                      />
-    </FrameLayout>
+            </FrameLayout>
 
-            <Button
-                    android:id="@+id/login"
-                    android:layout_width="fill_parent"
-                    android:layout_height="45dp"
-                    android:layout_below="@id/usercode_layout"
-                    android:layout_marginTop="30dp"
-                    android:background="@drawable/btn_register_bg"
-                    android:textColor="@android:color/white"
-                    android:gravity="center"
-                    android:enabled="false"
-                    android:textSize="18sp"
-                    android:text="登录" />
-                <Button
-                    android:id="@+id/login_error"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignRight="@id/login"
-                    android:layout_marginTop="10dp"
-                    android:layout_below="@id/login"
-                    android:background="#00000000"
-                    android:textColor="@color/login_text_layout"
-                    android:text="忘记密码"
-                    android:textSize="16sp" />
-                <Button
-                    android:id="@+id/register"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignLeft="@id/login"
-                    android:layout_below="@id/login"
-                    android:layout_marginTop="10dp"
-                    android:background="#00000000"
-                    android:textColor="@color/login_text_layout"
-                    android:gravity="left|center_vertical"
-                    android:text="注册"
-                    android:textSize="16sp"
-                    android:visibility="visible" />
-        </RelativeLayout>
+        <Button
+                android:id="@+id/login"
+                android:layout_width="fill_parent"
+                android:layout_height="45dp"
+                android:layout_below="@id/usercode_layout"
+                android:layout_marginTop="30dp"
+                android:background="@drawable/btn_register_bg"
+                android:textColor="@android:color/white"
+                android:gravity="center"
+                android:enabled="false"
+                android:textSize="18sp"
+                android:text="登录" />
+        <Button
+                android:id="@+id/login_error"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:layout_marginLeft="30dp"
+                android:layout_below="@id/login"
+                android:background="#00000000"
+                android:textColor="@color/login_text_layout"
+                android:text="忘记密码?"
+                android:gravity="left|center_vertical"
+                android:textSize="16sp" />
+        <Button
+                android:id="@+id/register"
+                android:layout_toRightOf="@id/login_error"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/login"
+                android:layout_marginTop="30dp"
+                android:layout_marginRight="30dp"
+                android:background="#00000000"
+                android:textColor="@color/login_text_layout"
+                android:layout_alignParentRight="true"
+                android:gravity="right|center_vertical"
+                android:text="注册账户"
+                android:textSize="16sp"
+                android:visibility="visible" />
+
  </RelativeLayout>
+
+ </com.example11.view.LinearLayoutView>
+
+</RelativeLayout>
