--- a/res/layout/activity_regist_layout.xml
+++ b/res/layout/activity_regist_layout.xml
@@ -6,7 +6,26 @@
                 android:fitsSystemWindows="true" >
 
     <RelativeLayout
+            android:id="@+id/title"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/height_top_bar"
+            android:layout_alignParentTop="true"
+            android:background="@color/common_top_bar_blue" >
+
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:id="@+id/titlemsg"
+                android:text="注册"
+                android:textColor="#ffffff"
+                android:textSize="18sp" />
+    </RelativeLayout>
+
+    <RelativeLayout
             android:id="@+id/rg_login_layout"
+            android:layout_below="@id/title"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
@@ -18,7 +37,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/username_layout"
-                android:layout_marginTop="55dp"
+                android:layout_marginTop="20dp"
                 android:gravity="center" >
             <EditText
                     android:id="@+id/rg_username"
