--- a/res/layout/activity_setting.xml
+++ b/res/layout/activity_setting.xml
@@ -15,10 +15,10 @@
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
+                android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="10dp"
-                android:text="微信"
+                android:text="设置"
                 android:textColor="#ffffff"
                 android:textSize="18sp" />
 
