--- a/res/layout/fragment_main_01.xml
+++ b/res/layout/fragment_main_01.xml
@@ -1,9 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              tools:context="${packageName}.${activityClass}">
+              android:background="#ffffff"
+              android:orientation="vertical"
+              >
+   
+   <LinearLayout
+           android:layout_width="match_parent"
+           android:layout_height="40dp"
+           android:orientation="horizontal"
+           android:weightSum="4">
+         <TextView
+                 android:id="@+id/position"
+                 android:layout_width="wrap_content"
+                 android:layout_height="match_parent"
+                 android:layout_weight="1"
+                 android:text="地区"
+                 android:textSize="16sp"
+                 android:gravity="center"
+                  />
+
+      <TextView
+              android:id="@+id/yiyuan"
+              android:layout_width="wrap_content"
+              android:layout_height="match_parent"
+              android:layout_weight="1"
+              android:text="医院"
+              android:textSize="16sp"
+              android:gravity="center"
+      />
+
+      <TextView
+              android:id="@+id/keshi"
+              android:layout_width="wrap_content"
+              android:layout_height="match_parent"
+              android:layout_weight="1"
+              android:text="科室"
+              android:textSize="16sp"
+              android:gravity="center"
+      />
+
+      <TextView
+              android:id="@+id/mingyi"
+              android:layout_width="wrap_content"
+              android:layout_height="match_parent"
+              android:layout_weight="1"
+              android:text="名医"
+              android:textSize="16sp"
+              android:gravity="center"
+      />
+
+   </LinearLayout>
+
+   <View
+           android:layout_width="match_parent"
+           android:layout_height="1px"
+           android:background="#dadada" />
 
    <com.example11.view.XListView
            android:id="@+id/xListView"
