--- a/res/layout/fragment_main_02.xml
+++ b/res/layout/fragment_main_02.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
+              android:background="#ffffff"
     android:layout_height="fill_parent" >
 
      <com.example11.view.XListView
