--- a/res/layout/fragment_main_01.xml
+++ b/res/layout/fragment_main_01.xml
@@ -4,65 +4,29 @@
               android:layout_height="match_parent"
               android:background="#ffffff"
               android:orientation="vertical"
-              >
-   
-   <LinearLayout
-           android:layout_width="match_parent"
-           android:layout_height="40dp"
-           android:orientation="horizontal"
-           android:weightSum="4">
-         <TextView
-                 android:id="@+id/position"
-                 android:layout_width="wrap_content"
-                 android:layout_height="match_parent"
-                 android:layout_weight="1"
-                 android:text="地区"
-                 android:textSize="16sp"
-                 android:gravity="center"
-                  />
+>
+    <com.example11.view.DropDownMenu
+            android:id="@+id/dropDownMenu"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:ddmenuTextSize="13sp"
+            app:ddtextUnselectedColor="@color/drop_down_unselected"
+            app:ddtextSelectedColor="@color/drop_down_selected"
+            app:dddividerColor="@color/gray"
+            app:ddunderlineColor="@color/gray"
+            app:ddmenuSelectedIcon="@mipmap/drop_down_selected_icon"
+            app:ddmaskColor="@color/mask_color"
+            app:ddmenuBackgroundColor="@color/white"
+            app:ddmenuUnselectedIcon="@mipmap/drop_down_unselected_icon"
+    />
 
-      <TextView
-              android:id="@+id/yiyuan"
-              android:layout_width="wrap_content"
-              android:layout_height="match_parent"
-              android:layout_weight="1"
-              android:text="医院"
-              android:textSize="16sp"
-              android:gravity="center"
-      />
-
-      <TextView
-              android:id="@+id/keshi"
-              android:layout_width="wrap_content"
-              android:layout_height="match_parent"
-              android:layout_weight="1"
-              android:text="科室"
-              android:textSize="16sp"
-              android:gravity="center"
-      />
-
-      <TextView
-              android:id="@+id/mingyi"
-              android:layout_width="wrap_content"
-              android:layout_height="match_parent"
-              android:layout_weight="1"
-              android:text="名医"
-              android:textSize="16sp"
-              android:gravity="center"
-      />
-
-   </LinearLayout>
-
-   <View
-           android:layout_width="match_parent"
-           android:layout_height="1px"
-           android:background="#dadada" />
-
-   <com.example11.view.XListView
-           android:id="@+id/xListView"
-           android:layout_width="match_parent"
-           android:cacheColorHint="#00000000"
-           android:layout_height="match_parent"
-   />
+    <com.example11.view.XListView
+            android:id="@+id/xListView"
+            android:layout_width="match_parent"
+            android:cacheColorHint="#00000000"
+            android:layout_height="match_parent"
+    />
 
 </LinearLayout>
