切换效果 心逻辑添加

--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -17,4 +17,7 @@
     <color name="mask_color">#88888888</color>
     <color name="check_bg">#f2f2f2</color>
     <color name="un_press_color">#9C27B0</color>
+
+    <!--透明色-->
+    <color name="touming">#00000000</color>
 </resources>
