--- a/res/layout/fragment_main_01.xml
+++ b/res/layout/fragment_main_01.xml
@@ -11,6 +11,7 @@
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="#ffffff"
             app:ddmenuTextSize="13sp"
             app:ddtextUnselectedColor="@color/drop_down_unselected"
             app:ddtextSelectedColor="@color/drop_down_selected"
@@ -22,11 +23,11 @@
             app:ddmenuUnselectedIcon="@mipmap/drop_down_unselected_icon"
     />
 
-    <com.example11.view.XListView
-            android:id="@+id/xListView"
-            android:layout_width="match_parent"
-            android:cacheColorHint="#00000000"
-            android:layout_height="match_parent"
-    />
+    <!--<com.example11.view.XListView-->
+            <!--android:id="@+id/xListView"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:cacheColorHint="#00000000"-->
+            <!--android:layout_height="match_parent"-->
+    <!--/>-->
 
 </LinearLayout>
