--- a/res/layout/good_item_layout.xml
+++ b/res/layout/good_item_layout.xml
@@ -2,59 +2,69 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:background="#ffffff"
+                android:clickable="true"
+                >
+
+    <ImageView
+            android:id="@+id/photo"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_margin="10dp"
+            android:background="@drawable/ic_launcher"
+    />
+    <RelativeLayout
+            android:layout_toRightOf="@id/photo"
+            android:layout_width="match_parent"
+            android:id="@+id/top"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_height="20dp">
+
+        <TextView
+                android:id="@+id/money"
+                android:layout_alignParentRight="true"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:clickable="true">
-    
-            <ImageView
-                    android:id="@+id/photo"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:layout_margin="10dp"
-                    android:background="@drawable/ic_launcher"
-                    />
-            <RelativeLayout
-                    android:layout_toRightOf="@id/photo"
-                    android:layout_width="match_parent"
-                    android:id="@+id/top"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_height="20dp">
+                android:textSize="16sp"
+                android:singleLine="true"
+                android:clickable="false"
+                android:textColor="#000000"
+                android:text="￥1000"
+                android:maxEms="8"/>
 
-                <TextView
-                        android:id="@+id/money"
-                        android:layout_alignParentRight="true"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:textSize="16sp"
-                        android:singleLine="true"
-                        android:text="￥1000"
-                        android:maxEms="8"/>
-
-                <TextView
-                        android:id="@+id/name"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textSize="16sp"
-                        android:singleLine="true"
-                        android:maxEms="15"
-                        android:text="mnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemname"
-                        android:layout_toLeftOf="@id/money"/>
-            </RelativeLayout>
+        <TextView
+                android:id="@+id/name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:singleLine="true"
+                android:maxEms="15"
+                android:clickable="false"
+                android:textColor="#000000"
+                android:text="mnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemname"
+                android:layout_toLeftOf="@id/money"/>
+    </RelativeLayout>
 
     <TextView
             android:id="@+id/descption"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="16sp"
+            android:layout_height="60dp"
+            android:textSize="15sp"
             android:maxLines="3"
             android:maxEms="33"
-            android:text="descptiondescptiondescptiondescptiondescptiondescptiondescptiondescptiondescptiondescptiondescptiondescptiondescptiondescption"
+            android:textColor="#000000"
             android:layout_toRightOf="@id/photo"
+            android:text="mnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemname"
+            android:clickable="false"
             android:layout_below="@id/top"
             android:layout_marginTop="10dp"/>
 
-
-
-
+    <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:layout_alignParentBottom="true"
+            android:background="#bababa"/>
 
 </RelativeLayout>
