--- a/res/layout/layout_webview.xml
+++ b/res/layout/layout_webview.xml
@@ -1,26 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:orientation="vertical"
-             android:layout_width="fill_parent"
-             android:layout_height="fill_parent"
->
-    <WebView
-            android:id="@+id/web"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:background="#000"
-            ></WebView>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent">
 
-    <ProgressBar
-            android:id="@+id/progress"
-            android:layout_width="fill_parent"
-            android:layout_height="2dp"
-            android:visibility="gone"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_gravity="top"
-            android:max="100"
-            android:progress="50"
-            />
+    <RelativeLayout
+            android:id="@+id/title"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/height_top_bar"
+            android:layout_alignParentTop="true"
+            android:background="@color/common_top_bar_blue" >
 
-</FrameLayout>
+        <TextView
+                android:id="@+id/titlemsg"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:gravity="center"
+                android:textColor="@color/title_text_color"
+                android:textSize="@dimen/title_size" />
 
+    </RelativeLayout>
+
+        <FrameLayout
+                android:layout_below="@id/title"
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                >
+                <WebView
+                        android:id="@+id/web"
+                        android:layout_width="fill_parent"
+                        android:layout_height="fill_parent"
+                        android:background="#000"
+                        android:scrollbars="none"
+                        ></WebView>
+
+                <ProgressBar
+                        android:id="@+id/progress"
+                        android:layout_width="fill_parent"
+                        android:layout_height="2dp"
+                        android:visibility="gone"
+                        style="?android:attr/progressBarStyleHorizontal"
+                        android:layout_gravity="top"
+                        android:max="100"
+                        android:progress="50"
+                        />
+
+        </FrameLayout>
+
+</RelativeLayout>
