--- a/res/layout/good_item_layout.xml
+++ b/res/layout/good_item_layout.xml
@@ -4,7 +4,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:background="#ffffff"
-                android:clickable="true"
+                android:descendantFocusability="blocksDescendants"
                 >
 
     <ImageView
@@ -29,7 +29,6 @@
                 android:layout_height="match_parent"
                 android:textSize="16sp"
                 android:singleLine="true"
-                android:clickable="false"
                 android:textColor="#000000"
                 android:text="￥1000"
                 android:maxEms="8"/>
@@ -41,9 +40,8 @@
                 android:textSize="16sp"
                 android:singleLine="true"
                 android:maxEms="15"
-                android:clickable="false"
                 android:textColor="#000000"
-                android:text="mnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemname"
+                android:text="mmnamemnamemnamemnamemnamemnamemname"
                 android:layout_toLeftOf="@id/money"/>
     </RelativeLayout>
 
@@ -57,7 +55,6 @@
             android:textColor="#000000"
             android:layout_toRightOf="@id/photo"
             android:text="mnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemname"
-            android:clickable="false"
             android:layout_below="@id/top"
             android:layout_marginTop="10dp"/>
 
