--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -25,4 +25,6 @@
 
     <dimen name="default_edittext_height">50dp</dimen>
 
+    <dimen name="doctor_detail_margin_top">10dp</dimen>
+
 </resources>
