--- a/res/layout/activity_login_layout.xml
+++ b/res/layout/activity_login_layout.xml
@@ -20,6 +20,15 @@
                 android:text="E患通"
                 android:textColor="#ffffff"
                 android:textSize="18sp" />
+
+        <Button
+                android:id="@+id/go_back"
+                android:layout_width="@dimen/go_back_w"
+                android:layout_height="@dimen/go_back_h"
+                android:layout_centerVertical="true"
+                android:layout_alignParentLeft="true"
+                android:background="@drawable/go_back_bg"
+                android:layout_marginLeft="@dimen/go_back_margin_left"/>
     </RelativeLayout>
 
 <com.example11.view.LinearLayoutView
