--- a/res/layout/fragment_main_01.xml
+++ b/res/layout/fragment_main_01.xml
@@ -10,7 +10,7 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:background="#ffffff"
             app:ddmenuTextSize="13sp"
             app:ddtextUnselectedColor="@color/drop_down_unselected"
@@ -23,11 +23,11 @@
             app:ddmenuUnselectedIcon="@mipmap/drop_down_unselected_icon"
     />
 
-    <!--<com.example11.view.XListView-->
-            <!--android:id="@+id/xListView"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:cacheColorHint="#00000000"-->
-            <!--android:layout_height="match_parent"-->
-    <!--/>-->
+    <com.example11.view.XListView
+            android:id="@+id/xListView"
+            android:layout_width="match_parent"
+            android:cacheColorHint="#00000000"
+            android:layout_height="match_parent"
+    />
 
 </LinearLayout>
