--- a/res/layout/fragment_main_03.xml
+++ b/res/layout/fragment_main_03.xml
@@ -26,7 +26,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="12dp"
                 android:layout_toRightOf="@id/iv_personal_info"
                 android:text="个人信息"
                 android:textColor="#353535"
@@ -61,11 +61,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="12dp"
                 android:layout_toRightOf="@id/iv_setting"
                 android:text="设置"
-                android:textColor="#353535"
-                android:textSize="16sp" />
+                android:textColor="@color/list_item_color"
+                android:textSize="@dimen/list_item_size" />
 
         <View
                 android:layout_width="match_parent"
@@ -95,11 +95,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="12dp"
                 android:layout_toRightOf="@id/iv_pay_history"
                 android:text="支付记录"
-                android:textColor="#353535"
-                android:textSize="16sp" />
+                android:textColor="@color/list_item_color"
+                android:textSize="@dimen/list_item_size" />
 
         <View
                 android:layout_width="match_parent"
@@ -130,11 +130,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="12dp"
                 android:layout_toRightOf="@id/iv_bind_hard"
                 android:text="硬件绑定"
-                android:textColor="#353535"
-                android:textSize="16sp" />
+                android:textColor="@color/list_item_color"
+                android:textSize="@dimen/list_item_size" />
 
         <View
                 android:layout_width="match_parent"
@@ -164,11 +164,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="12dp"
                 android:layout_toRightOf="@id/iv_health_report"
                 android:text="健康报告"
-                android:textColor="#353535"
-                android:textSize="16sp" />
+                android:textColor="@color/list_item_color"
+                android:textSize="@dimen/list_item_size"/>
         <View
                 android:layout_width="match_parent"
                 android:layout_height="0.1dp"
@@ -198,11 +198,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="12dp"
                 android:layout_toRightOf="@id/iv_manger_doctor"
                 android:text="医生管理"
-                android:textColor="#353535"
-                android:textSize="16sp" />
+                android:textColor="@color/list_item_color"
+                android:textSize="@dimen/list_item_size"/>
         <View
                 android:layout_width="match_parent"
                 android:layout_height="0.1dp"
@@ -210,4 +210,53 @@
                 android:layout_marginRight="12dp"
                 android:background="#dadada" />
     </RelativeLayout>
+
+
+    <RelativeLayout
+            android:id="@+id/re_noti_div"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:background="@drawable/btn_list_item_bg"
+            android:clickable="true"
+            android:paddingLeft="12dp" >
+
+        <ImageView
+                android:id="@+id/iv_noti"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="12dp"
+                android:src="@drawable/ic_launcher" />
+
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="12dp"
+                android:layout_toRightOf="@id/iv_noti"
+                android:text="消息列表"
+                android:textColor="@color/list_item_color"
+                android:textSize="@dimen/list_item_size"/>
+        <View
+                android:layout_width="match_parent"
+                android:layout_height="0.1dp"
+                android:layout_alignParentBottom="true"
+                android:layout_marginRight="12dp"
+                android:background="#dadada" />
+    </RelativeLayout>
+
+    <Button
+            android:id="@+id/login_out"
+            android:layout_width="fill_parent"
+            android:layout_height="45dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/btn_register_bg"
+            android:textColor="@android:color/white"
+            android:gravity="center"
+            android:textSize="18sp"
+            android:text="退出" />
+
 </LinearLayout>
