--- a/res/layout/good_item_layout.xml
+++ b/res/layout/good_item_layout.xml
@@ -2,17 +2,17 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
+                android:layout_height="80dp"
                 android:background="#ffffff"
                 android:descendantFocusability="blocksDescendants"
-                >
+>
 
     <ImageView
             android:id="@+id/photo"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_margin="10dp"
-            android:background="@drawable/ic_launcher"
+            android:scaleType="centerCrop"
     />
     <RelativeLayout
             android:layout_toRightOf="@id/photo"
@@ -27,9 +27,9 @@
                 android:layout_alignParentRight="true"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:textSize="16sp"
+                android:textSize="@dimen/list_item_title_size"
                 android:singleLine="true"
-                android:textColor="#000000"
+                android:textColor="@color/color_money"
                 android:text="￥1000"
                 android:maxEms="8"/>
 
@@ -37,10 +37,10 @@
                 android:id="@+id/name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="16sp"
+                android:textSize="@dimen/list_item_title_size"
                 android:singleLine="true"
                 android:maxEms="15"
-                android:textColor="#000000"
+                android:textColor="@color/list_item_title_color"
                 android:text="mmnamemnamemnamemnamemnamemnamemname"
                 android:layout_toLeftOf="@id/money"/>
     </RelativeLayout>
@@ -48,15 +48,15 @@
     <TextView
             android:id="@+id/descption"
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
-            android:textSize="15sp"
-            android:maxLines="3"
-            android:maxEms="33"
-            android:textColor="#000000"
+            android:layout_height="40dp"
+            android:lines="2"
+            android:ellipsize="end"
+            android:textColor="@color/list_item_msg_color"
+            android:textSize="@dimen/list_item_msg_size"
             android:layout_toRightOf="@id/photo"
             android:text="mnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemnamemname"
             android:layout_below="@id/top"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginTop="5dp"/>
 
     <TextView
             android:layout_width="match_parent"
