--- a/res/layout/layout_webview.xml
+++ b/res/layout/layout_webview.xml
@@ -21,6 +21,15 @@
                 android:textColor="@color/title_text_color"
                 android:textSize="@dimen/title_size" />
 
+        <Button
+                android:id="@+id/go_back"
+                android:layout_width="@dimen/go_back_w"
+                android:layout_height="@dimen/go_back_h"
+                android:layout_centerVertical="true"
+                android:layout_alignParentLeft="true"
+                android:background="@drawable/go_back_bg"
+                android:layout_marginLeft="@dimen/go_back_margin_left"/>
+
     </RelativeLayout>
 
         <FrameLayout
