--- a/res/layout/list_item.xml
+++ b/res/layout/list_item.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_height="100dp"
+        android:layout_height="80dp"
         android:layout_width="match_parent"
         android:background="#ffffff"
         android:gravity="center_vertical">
     
         <ImageView
                 android:id="@+id/img_header"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
                 android:layout_margin="10dp"
                 android:background="@drawable/ic_launcher"/>
         <LinearLayout
@@ -24,9 +24,9 @@
                         android:layout_height="20dp"
                         android:layout_marginTop="10dp"
                         android:singleLine="true"
-                        android:textColor="#000000"
+                        android:textColor="@color/list_item_title_color"
                         android:gravity="top|left"
-                        android:textSize="15sp"
+                        android:textSize="@dimen/list_item_title_size"
                         android:ellipsize="end"
                         android:maxEms="18"
                         android:text="djfl;sakjgla;s将拉开圣诞节"
@@ -34,12 +34,12 @@
                 <TextView
                         android:id="@+id/descption"
                         android:layout_width="match_parent"
-                        android:layout_height="60dp"
-                        android:textColor="#50000000"
-                        android:textSize="15sp"
+                        android:layout_height="40dp"
+                        android:textColor="@color/list_item_msg_color"
+                        android:textSize="@dimen/list_item_msg_size"
                         android:lines="2"
                         android:ellipsize="end"
-                        android:layout_marginTop="10dp"
+                        android:layout_marginTop="5dp"
                         android:text="djfl;sakjgla;s将拉开圣诞节分厘卡似的个撒法时间返了个扩大解放了角度来看是分厘卡时间山东会计法律是苦尽甘来发生卡的ask理解的立法"
                         />
         </LinearLayout>
