--- a/res/layout/neterror_item.xml
+++ b/res/layout/neterror_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="40dp"
+    android:layout_height="20dp"
     android:background="#b3b3b3"
     android:clickable="true"
     android:orientation="vertical" >
@@ -9,8 +9,8 @@
     <ImageView 
         android:layout_marginLeft="10dp"
         android:id="@+id/iv_neterror"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
+        android:layout_width="15dp"
+        android:layout_height="15dp"
         android:src="@drawable/ic_launcher"
         android:layout_centerVertical="true"
         />
@@ -22,6 +22,7 @@
         android:text="不能连接到服务器"
         android:textColor="#000"
         android:layout_centerVertical="true"
+        android:textSize="12sp"
         android:layout_toRightOf="@id/iv_neterror"
         />
 
