--- a/res/layout/personal_info_change_item.xml
+++ b/res/layout/personal_info_change_item.xml
@@ -22,6 +22,15 @@
                 android:textSize="@dimen/title_size" />
 
         <Button
+                android:id="@+id/go_back"
+                android:layout_width="@dimen/go_back_w"
+                android:layout_height="@dimen/go_back_h"
+                android:layout_centerVertical="true"
+                android:layout_alignParentLeft="true"
+                android:background="@drawable/go_back_bg"
+                android:layout_marginLeft="@dimen/go_back_margin_left"/>
+
+        <Button
                 android:id="@+id/save"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
