--- a/res/layout/personal_infos_layout.xml
+++ b/res/layout/personal_infos_layout.xml
@@ -30,6 +30,16 @@
                         android:text="个人信息"
                         android:textColor="#ffffff"
                         android:textSize="18sp" />
+
+
+                <Button
+                        android:id="@+id/go_back"
+                        android:layout_width="@dimen/go_back_w"
+                        android:layout_height="@dimen/go_back_h"
+                        android:layout_centerVertical="true"
+                        android:layout_alignParentLeft="true"
+                        android:background="@drawable/go_back_bg"
+                        android:layout_marginLeft="@dimen/go_back_margin_left"/>
             </RelativeLayout>
 
             <RelativeLayout
