--- a/res/layout/activity_main2.xml
+++ b/res/layout/activity_main2.xml
@@ -5,7 +5,7 @@
               android:background="#ffffff"
               android:orientation="vertical"
 >
-<com.test.view.DropDownMenu
+<com.test.view.DropDownMenu1
     android:id="@+id/dropDownMenu"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -22,11 +22,11 @@
     app:ddmenuUnselectedIcon="@mipmap/drop_down_unselected_icon"
   />
 
-    <com.test.view.XListView
-    android:id="@+id/xListView"
-    android:layout_width="match_parent"
-    android:cacheColorHint="#00000000"
-    android:layout_height="match_parent"
-    />
+    <!--<com.test.view.XListView-->
+    <!--android:id="@+id/xListView"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:cacheColorHint="#00000000"-->
+    <!--android:layout_height="match_parent"-->
+    <!--/>-->
 
         </LinearLayout>
